# dolar-hoy

./: .env.example  Cargo.toml  Makefile  README.md
.github/workflows/: quality-gate.yml
docker/: Dockerfile  compose.yml
src/: config.rs  constants.rs  database.rs  lib.rs  main.rs  scrapper.rs
